# pihole_analytics

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
pihole_analytics/: app.py  example_env
pihole_analytics/figures/: entropy_fig.py  frequency_fig.py  qot_fig.py
pihole_analytics/pages/: FTLDNS_browser.py  analytics.py  home.py
pihole_analytics/workers/: date_to_epoch.py  domain_check.py  ftldns_worker.py  result_formatter.py  result_normalizer.py
