[tool.poetry]
name = "pihole-analytics"
version = "0.1.0"
description = "Advanced Analytics for PiHole's FTLDNS "
authors = ["Patrick Dugan dpdug4n@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dash = "*"
dash-ag-grid = "*"
pandas = "*"
dash_bootstrap_components = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
